--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eclectic-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "A dark syntax theme with minimal coloring for minimal distraction.",
+  "description": "A dark syntax theme that's real pretty.",
   "keywords": [
     "syntax",
     "theme",
