--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eclectic-syntax",
   "theme": "syntax",
   "version": "0.1.1",
-  "description": "A dark syntax theme that's real pretty.",
+  "description": "A dark syntax theme optimized for JavaScript.",
   "keywords": [
     "syntax",
     "theme",
